jwt lab is ok