@@ -11,6 +11,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class JwtUserDetailsService implements UserDetailsService {
@@ -26,8 +27,9 @@ public class JwtUserDetailsService implements UserDetailsService {
         Optional<UserEntity> optionalUser = userRepository.findByEmail(username);
         if (optionalUser.isPresent()) {
             UserEntity userEntity = optionalUser.get();
-            List<SimpleGrantedAuthority> authorities = userEntity.getRoles().stream().map(role -> new SimpleGrantedAuthority("ROLE_" + role))
-                    .toList();
+            List<SimpleGrantedAuthority> authorities = userEntity.getRoles().stream()
+                    .map(role -> new SimpleGrantedAuthority("ROLE_" + role.name()))
+                    .collect(Collectors.toList());
             return new User(userEntity.getEmail(), userEntity.getPasswordHash(), authorities);
         } else {
             throw new UsernameNotFoundException("User not found with username: " + username);
